--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="libraries/p5Collide.js"></script>
     <script src="Car.js"></script>
     <script src="Map.js"></script>
+    <script src="UI.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
