Draw arrows every once in a while when showing nodes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="Car.js"></script>
     <script src="Map.js"></script>
     <script src="UI.js"></script>
+    <script src="Levels.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
