--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="Map.js"></script>
     <script src="Levels.js"></script>
     <script src="UI.js"></script>
+    <script src="Zip.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
